integrate triggers into detectors
Signed-off-by: Subhobrata Dey <sbcd90@gmail.com>